Programa para pedir muestras V0.2:
-Se ordeno el código en distintos archivos JS
-Ahora se agregan los items a través de JS y no del HTML
-Nueva pagina al volver
-Ahora todo se carga desde el HTML mediante dom



Programa para pedir muestras V0.15:

-Se elimino código sin uso
-Se cambio process.exit() por un return ya que daba error en consola.
-Se cambio el onclick de HTML a eventos
-La función continuar paso a ser funContinuarPedido para facilitar lectura de código
-Si se procedía a clickear cargar el pedido multiples veces, se guardaban los valores, por lo que
las muestras se pedian repetidamente; ahora se borra el array lo que hace que se pidan 1 sola vez y
no queden guardadas


Programa para pedir muestras V0.1:

-Se cambió el código que buscaba por clase y agregaba con DOM casi manualmente por un array que lo simplifico
-Se cambiaron los 3 productos a 5
-Ahora aparece listado el producto y el precio
-No se pueden repetir muestras